# statjax

./: README.md  build.py  pyproject.toml
statjax/: __init__.py  base.py  utils.py
statjax/regression/: __init__.py  _base.py  _components.py
statjax/tests/: __init__.py  test_frame.py
